--- a/electron/resources/index.html
+++ b/electron/resources/index.html
@@ -8,11 +8,14 @@
     <!-- Electron way to include JQuery-->
     <script>window.$ = window.jQuery = require('./bower_components/jquery/dist/jquery');</script>
     <script src="bower_components/semantic/dist/semantic.js"></script>
+    <script src="../build/app/index.js"></script>
 
     <title>Hello World!</title>
+
 </head>
 <body>
 <h1>Hello World!</h1>
+
 We are using node <script>document.write(process.versions.node)</script>,
 Chrome <script>document.write(process.versions.chrome)</script>,
 and Electron <script>document.write(process.versions.electron)</script>.
