Add semantic ui on ts template

--- a/vue-ts/index.html
+++ b/vue-ts/index.html
@@ -1,10 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head></head>
+<head>
+
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/semantic/dist/semantic.js"></script>
+
+    <link rel="stylesheet" href="bower_components/semantic/dist/semantic.css" type="text/css"/>
+
+</head>
 
 <body>
 <div id="app"></div>
-</body>
-<script src="./dist/build.js"></script>
 
+<script src="./dist/build.js"></script>
+</body>
 </html>
