Add other component, use of vue router

--- a/vue-ts/src/main.html
+++ b/vue-ts/src/main.html
@@ -3,6 +3,7 @@
 
     <vertical-menu></vertical-menu>
 
-    <hello-world name="World"></hello-world>
+    <!-- Where views triggered by router goes -->
+    <router-view></router-view>
 
 </div>
