--- a/vue-ts/src/main.html
+++ b/vue-ts/src/main.html
@@ -1,9 +1,51 @@
+<div class="ui grid container">
 
-<div>
+    <div class="row">
 
-    <vertical-menu></vertical-menu>
+        <!-- Main menu -->
 
-    <!-- Where views triggered by router goes -->
-    <router-view></router-view>
+        <div class="four wide column">
+            <div class="ui vertical inverted menu">
+
+                <div class="item">
+                    <div class="header">Products</div>
+                    <div class="menu">
+                        <router-link class="item" to="/enterprise">Enterprise</router-link>
+                        <router-link class="item" to="/consumer">Consumer</router-link>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="header">CMS Solutions</div>
+                    <div class="menu">
+                        <a class="item">Rails</a>
+                        <a class="item">Python</a>
+                        <a class="item">PHP</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="header">Hosting</div>
+                    <div class="menu">
+                        <a class="item">Shared</a>
+                        <a class="item">Dedicated</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="header">Support</div>
+                    <div class="menu">
+                        <a class="item">E-mail Support</a>
+                        <a class="item">FAQs</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Main app content, Where views triggered by router goes -->
+
+        <div class="eleven wide column">
+            <router-view></router-view>
+        </div>
+
+    </div>
 
 </div>
+
