--- a/vue-ts/index.html
+++ b/vue-ts/index.html
@@ -6,6 +6,7 @@
     <script src="bower_components/semantic/dist/semantic.js"></script>
 
     <link rel="stylesheet" href="bower_components/semantic/dist/semantic.css" type="text/css"/>
+    <link rel="stylesheet" href="dist/main.bundle.css" type="text/css"/>
 
 </head>
 
