Improve template, add examples

--- a/vue-ts-template/src/main.html
+++ b/vue-ts-template/src/main.html
@@ -5,6 +5,13 @@
     <div class="ui vertical inverted menu sticky">
 
         <div class="item">
+            <div class="header">Examples</div>
+            <div class="menu">
+                <router-link class="item" to="/computed-values">Computed values</router-link>
+                <router-link class="item" to="/function-example">Function in template</router-link>
+            </div>
+        </div>
+        <div class="item">
             <div class="header">Products</div>
             <div class="menu">
                 <router-link class="item" to="/enterprise">Enterprise</router-link>
